== LATEST

 * Create output directory when recording frames if necessary.

== 0.1.0 2010-06-23

 * Add Bulldog.path_root, for specifying per-environment roots.
 * Add :root interpolation key. Replaces :public_path for Rails apps.

== 0.0.15 2010-04-13

 * Fix image dimensions when exif:Orientation is 8.

== 0.0.14 2010-01-19

 * Optimizations.

== 0.0.13 2010-01-18

 * Strip images if the :stripped style attribute is set.

== 0.0.12 2010-01-18

 * Optimizations.

== 0.0.11 2009-12-03

 * Make Attachment::Base#process! take options like #process.

== 0.0.10 2009-12-01

 * Fix recording video frame when frame attachment already exists.

== 0.0.9 2009-11-18

 * Allow specifying a subset of styles to process via a :styles option
   to #process.

== 0.0.8 2009-11-18

 * Fix invocations of ffmpeg over multiple styles.

== 0.0.7 2009-11-17

 * Allow configuration through config/bulldog.yml in Rails.

== 0.0.6 2009-11-17

 * Add attachment#reload for when the file changes behind Bulldog's
   back.

== 0.0.5 2009-11-17

 * Fix @original_attachments not being set in after save.

== 0.0.4 2009-11-16

 * Fix destroying the original file when the record is destroyed.

== 0.0.3 2009-11-16

 * Add a way to respond to processing errors:
   - #process returns true/false.
   - #process! raises a AR::InvalidRecord if any errors.
   - ...just like ActiveRecord::Base::save.

== 0.0.2 2009-11-16

 * #process_once was stopping other processors from running.

== 0.0.1 2009-11-15

 * Woof.